[package]
name = "fuzzor-prometheus"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
fuzzor_infra = { path = "../infra/types", package = "types", version = "0.1.0" }
fuzzor = { path = "../fuzzor", version = "0.1.0" }

prometheus-client = "0.23.1"

async-trait = "0.1.80"
hyper = { version = "1.6.0", features = ["http1", "server"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
http-body-util = "0.1.3"
hyper-util = "0.1.11"
log = "0.4.27"
